force-app/main/default/objects/NPN_Business_Plan_Goals__c/NPN_Business_Plan_Goals__c.object-meta.xml
<CustomObject>
    <label>NPN Business Plan Goal</label>
    <nameField>
        <label>NPN Business Plan Goals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPN Business Plan Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>