force-app/main/default/objects/NPN_Business_Plan_Goals__c/fields/Fourth_Quarter_Date__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Quarter_Date__c</fullName>
    <businessOwnerUser>adacosta@nvidia.com.trprod</businessOwnerUser>
    <inlineHelpText>Select a date within the fiscal quarter to which this goal is applicable</inlineHelpText>
    <label>Fourth Quarter Date</label>
    <type>Date</type>
</CustomField>