force-app/main/default/objects/NPN_Business_Plan_Goals__c/fields/Full_Year_Goal__c.field-meta.xml
<CustomField>
    <fullName>Full_Year_Goal__c</fullName>
    <businessOwnerUser>adacosta@nvidia.com.trprod</businessOwnerUser>
    <formula>First_Quarter_Goal_Amount__c  +  Second_Quarter_Goal_Amount__c  +  Third_Quarter_Goal_Amount__c  +  Fourth_Quarter_Goal_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Year Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>