force-app/main/default/objects/NPN_Business_Plan_Goals__c/fields/NPN_Business_Plan__c.field-meta.xml
<CustomField>
    <fullName>NPN_Business_Plan__c</fullName>
    <label>NPN Business Plan</label>
    <referenceTo>NPN_Business_Plan__c</referenceTo>
    <relationshipLabel>NPN Business Plan Goals</relationshipLabel>
    <relationshipName>NPN_Business_Plan_Goals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>