force-app/main/default/objects/NPN_Business_Plan_Goals__c/fields/NPN_Business_Plan_Goal_Number__c.field-meta.xml
<CustomField>
    <fullName>NPN_Business_Plan_Goal_Number__c</fullName>
    <displayFormat>NBPG-{000000}</displayFormat>
    <label>NPN Business Plan Goal Number</label>
    <type>AutoNumber</type>
</CustomField>