force-app/main/default/objects/NPN_Business_Plan_Goals__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>Tesla</fullName>
            </value>
            <value>
                <fullName>Quadro</fullName>
            </value>
            <value>
                <fullName>Grid</fullName>
            </value>
            <value>
                <fullName>Compute</fullName>
                <isActive>false</isActive>
                <label>Compute</label>
            </value>
            <value>
                <fullName>Compute DGX</fullName>
                <isActive>false</isActive>
                <label>Compute DGX</label>
            </value>
            <value>
                <fullName>Embedded Edge</fullName>
                <isActive>false</isActive>
                <label>Embedded Edge</label>
            </value>
            <value>
                <fullName>Virtualization</fullName>
                <isActive>false</isActive>
                <label>Virtualization</label>
            </value>
            <value>
                <fullName>Visualization</fullName>
                <isActive>false</isActive>
                <label>Visualization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>