force-app/main/default/objects/NPN_Business_Plan_Goals__c/fields/Second_Quarter_Goal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Second_Quarter_Goal_Amount__c</fullName>
    <businessOwnerUser>adacosta@nvidia.com.trprod</businessOwnerUser>
    <label>Second Quarter Goal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>